# medchem

./: .gitignore  CHANGELOG.rst  CNAME  LICENSE.md  MANIFEST.in  README.md  env.yml  mkdocs.yml  pyproject.toml  requirements.txt  rever.xsh  setup.py  versions.json
.devcontainer/: dev.DockerFile  dev.Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: code-check.yml  doc.yml  release.yml  rever-release.yml  test.yml  weekly-test.yml
1.4.0/: 404.html  index.html  objects.inv  sitemap.xml
1.4.0/api/: medchem.alerts.html  medchem.catalog.html  medchem.complexity.html  medchem.demerits.html  medchem.filter.html  medchem.groups.html  medchem.query.html  medchem.rules.html  medchem.utils.html
1.4.0/search/: search_index.json
1.4.0/tutorials/: getting-started.html
2.0.0/: 404.html  cli.html  index.html  sitemap.xml
2.0.0/api/: medchem.catalogs.html  medchem.complexity.html  medchem.constraints.html  medchem.functional.html  medchem.groups.html  medchem.query.html  medchem.rules.html  medchem.structural.html  medchem.utils.html
2.0.0/search/: search_index.json
2.0.0/tutorials/: Catalogs.html  Chemical_Groups.html  Constraints_Filtering.html  Medchem_Query_Language.html  Medchem_Rules.html  Molecular_Complexity.html  Structural_Filters.html
2.0.1/: 404.html  cli.html  index.html  sitemap.xml
2.0.1/api/: medchem.catalogs.html  medchem.complexity.html  medchem.constraints.html  medchem.functional.html  medchem.groups.html  medchem.query.html  medchem.rules.html  medchem.structural.html  medchem.utils.html
2.0.1/tutorials/: Basic_Concepts.html  Catalogs.html  Chemical_Groups.html  Constraints_Filtering.html  Functional_API.html  Medchem_Query_Language.html  Medchem_Rules.html  Molecular_Complexity.html  Structural_Filters.html
2.0.2/: 404.html  cli.html  index.html  sitemap.xml
2.0.2/api/: medchem.catalogs.html  medchem.complexity.html  medchem.constraints.html  medchem.functional.html  medchem.groups.html  medchem.query.html  medchem.rules.html  medchem.structural.html  medchem.utils.html
2.0.2/tutorials/: Basic_Concepts.html  Catalogs.html  Chemical_Groups.html  Constraints_Filtering.html  Functional_API.html  Medchem_Query_Language.html  Medchem_Rules.html  Molecular_Complexity.html  Structural_Filters.html
2.0.3/: 404.html  cli.html  index.html  sitemap.xml
2.0.3/api/: medchem.catalogs.html  medchem.complexity.html  medchem.constraints.html  medchem.functional.html  medchem.groups.html  medchem.query.html  medchem.rules.html  medchem.structural.html  medchem.utils.html
2.0.3/tutorials/: Basic_Concepts.html  Catalogs.html  Chemical_Groups.html  Constraints_Filtering.html  Functional_API.html  Medchem_Query_Language.html  Medchem_Rules.html  Molecular_Complexity.html  Structural_Filters.html
2.0.4/: 404.html  cli.html  index.html  sitemap.xml
2.0.4/api/: medchem.catalogs.html  medchem.complexity.html  medchem.constraints.html  medchem.functional.html  medchem.groups.html  medchem.query.html  medchem.rules.html  medchem.structural.html  medchem.utils.html
2.0.4/tutorials/: Basic_Concepts.html  Catalogs.html  Chemical_Groups.html  Constraints_Filtering.html  Functional_API.html  Medchem_Query_Language.html  Medchem_Rules.html  Molecular_Complexity.html  Structural_Filters.html
2.0.5/: 404.html  cli.html  index.html  sitemap.xml
2.0.5/api/: medchem.catalogs.html  medchem.complexity.html  medchem.constraints.html  medchem.functional.html  medchem.groups.html  medchem.query.html  medchem.rules.html  medchem.structural.html  (+1 more)
docs/: cli-references.md  cli.md  index.md
main/: 404.html  cli.html  index.html  objects.inv  sitemap.xml
medchem/: Makefile  __init__.py  _version.py  alerts.py  api.py  catalog.py  cli.py  constraints.py  demerits.py  filter.py  groups.py  novartis.py
medchem.recipe/: build.sh  meta.yaml
medchem_OLD/: alerts.py  catalog.py
news/: bredt.rst  bug_fix.rst  circus.rst  dev.rst  fixes2.rst  generative.rst  genrules.rst  hingebinder.rst  index.rst  investigate-bredt.rst  perf.rst  refct.rst
notebooks/: complexity-dev.ipynb  dev-chemical_groups-dump.ipynb  dev-global-chem-dump.ipynb  dev-hinge-binders.ipynb  dev_constraints.ipynb  dev_query.ipynb  dev_symmetry.ipynb
stable/: 404.html  cli.html  index.html  objects.inv  sitemap.xml
tests/: test_api.py  test_catalogs.py  test_chemical_groups.py  test_cli.py  test_complexity.py  test_constraints.py  test_demerit_filters.py  test_filter.py  test_functional_api.py  test_functional_generic.py  test_generic_filter.py  test_groups.py  test_import.py  test_lead_filter.py  test_notebooks.py  test_query.py  test_rules.py  test_structural.py  test_utilities.py  test_utils_graph.py  test_utils_loader.py  test_utils_smarts_utils.py
tests_OLD/: test_demerit_filters.py  test_generic_filter.py  test_lead_filter.py  test_query.py
(+166 files in other folders)
