[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "medchem"
description = "Medchem: Molecular filtering for drug discovery."
dynamic = ["version"]
authors = [
    { name = "Emmanuel Noutahi", email = "emmanuel@valencediscovery.com" },
    { name = "Hadrien Mary", email = "hadrien@valencediscovery.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "typer",
    "loguru",
    "tqdm",
    "numpy",
    "lark",
    "pandas",
    "networkx",
    "datamol >=0.10",
    "rdkit",
]

[project.scripts]
medchem = "medchem.cli:app"

[project.urls]
"Source Code" = "https://github.com/datamol-io/medchem"
"Bug Tracker" = "https://github.com/datamol-io/medchem/issues"
Documentation = "https://medchem-docs.datamol.io/"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
fallback_version = "dev"

[tool.setuptools.packages.find]
where = ["."]
include = ["medchem", "medchem.*"]
exclude = []
namespaces = true

[tool.setuptools.package-data]
"medchem" = ["./data/**/*"]

[tool.black]
line-length = 110
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose --durations=10 -n auto --cov=medchem --cov-fail-under=90 --cov-report xml --cov-report term"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning:jupyter_client.connect.*:"]

[tool.coverage.run]
source = ["medchem/"]
disable_warnings = ["no-data-collected"]
data_file = ".coverage/coverage"

[tool.coverage.report]
omit = ["medchem/__init__.py", "medchem/_version.py"]

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["*.ipynb"]  # Exclude Jupyter notebooks

[tool.ruff.lint]
ignore = [
    "E501", # Never enforce `E501` (line length violations).
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # imported but unused
    "E402", # Module level import not at top of file
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 150
